15 June 2012: Wouter
	- Fix crash on read of ssl443 entry without a hash.

8 June 2012: Wouter
	- Fix OSX user panel stop and start in reinstall, also fix for double
	  popups during reinstall.
	- lint clean.

7 June 2012: Wouter
	- tag 0.11 release.
	- trunk is 0.12 is development.
	- log correct type in timeout for TXT.
	- restart panels on install on OSX.

6 June 2012: Wouter
	- fix permissions on root key for OSX.

5 June 2012: Wouter
	- wait for old daemon to stop in osx install at setdns.sh.
	- fix OSX unbound to be able to write root.key from the chroot.
	- manpage for check-updates option.

1 June 2012: Wouter
	- Http redirect support, for plain http check, in case hotspot has
	  a proxy that starts giving the internet contents.
	- GUI for OSX for software updates.
	- fix osx execl for software install.
	- update tray icon for osx software install.
	- fix osx comma in multiple DNS servers.
	- fix update installer

31 May 2012: Wouter
	- Fix bug in processing tray icon results from daemon.
	- url can contain numerical IP address and port number, in http
	  implementation.

22 May 2012: Wouter
	- Fix windows upgrade to preserve config files and to preserve the
	  installed (or not-installed) startmenu links.
	- Fix to not mess up the config files on a reinstall on windows.

21 May 2012: Wouter
	- windows runs installer from userspace.
	- windows dnssectrigger depends on unbound for boot invocation,
	  this fixes an error where it cannot tell unbound what to do.
	- fix updater for double callback due to retry and double reply.
	- fix slash in downloaded file and executed file (windows).
	- linebuffer for dnssec-trigger-control stdout, for results printout.

18 May 2012: Wouter
	- improved printout of SSL_ERROR_SYSCALL errors.
	- do not print interface-unknown and conn-reset errors upon system
	  restart for windows, only printed on high verbosity.

2 April 2012: Wouter
	- Remove debug print from update code.
	- Add debug prints to update code.